objects/Asset.object
<CustomObject>
    <fields>
        <fullName>manufacturer__c</fullName>
        <description>When the user adds a competitor product to a patient they must select the Manufacturer from this picklist.</description>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIOTRONIK</fullName>
                    <default>true</default>
                    <label>BIOTRONIK</label>
                </value>
                <value>
                    <fullName>5500_APC</fullName>
                    <label>AMERICAN PACEMAKER CORP.</label>
                </value>
                <value>
                    <fullName>5500_ACO</fullName>
                    <label>ANGEION CORP.</label>
                </value>
                <value>
                    <fullName>5500_BME</fullName>
                    <label>BIOMEC</label>
                </value>
                <value>
                    <fullName>5500_BSX</fullName>
                    <label>BOSTON SCIENTIFIC</label>
                </value>
                <value>
                    <fullName>5500_CAC</fullName>
                    <label>CARDIAC CONTROL</label>
                </value>
                <value>
                    <fullName>5500_CAI</fullName>
                    <label>CARDIAC IMPULSE</label>
                </value>
                <value>
                    <fullName>5500_CAP</fullName>
                    <label>CARDIAC PACEMAKER</label>
                </value>
                <value>
                    <fullName>5500_CPR</fullName>
                    <label>CARDIAC PRODUCTS</label>
                </value>
                <value>
                    <fullName>5500_CPM</fullName>
                    <label>CARDIO-PACE MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_CHR</fullName>
                    <label>CHRONIC</label>
                </value>
                <value>
                    <fullName>5500_COK</fullName>
                    <label>COOK</label>
                </value>
                <value>
                    <fullName>5500_COI</fullName>
                    <label>CORATOMIC INC.</label>
                </value>
                <value>
                    <fullName>5500_COR</fullName>
                    <label>CORDIS</label>
                </value>
                <value>
                    <fullName>5500_DAI</fullName>
                    <label>DAIG CORP.</label>
                </value>
                <value>
                    <fullName>5500_ES</fullName>
                    <label>EA</label>
                </value>
                <value>
                    <fullName>5500_ELM</fullName>
                    <label>ELA MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_ELS</fullName>
                    <label>ELS</label>
                </value>
                <value>
                    <fullName>5500_ENP</fullName>
                    <label>ENPATH MEDICAL INC.</label>
                </value>
                <value>
                    <fullName>5500_GRE</fullName>
                    <label>GREATBATCH</label>
                </value>
                <value>
                    <fullName>5500_GDT</fullName>
                    <label>GUIDANT</label>
                </value>
                <value>
                    <fullName>5500_IMP</fullName>
                    <label>IMPLANTRONIK</label>
                </value>
                <value>
                    <fullName>5500_INA</fullName>
                    <label>INHO A</label>
                </value>
                <value>
                    <fullName>5500_INH</fullName>
                    <label>INHOUEE</label>
                </value>
                <value>
                    <fullName>5500_INN</fullName>
                    <label>INHOUSEN</label>
                </value>
                <value>
                    <fullName>5500_INO</fullName>
                    <label>INNOMEDICA LTD.</label>
                </value>
                <value>
                    <fullName>5500_INT</fullName>
                    <label>INTERMEDICS INC.</label>
                </value>
                <value>
                    <fullName>5500_MDO</fullName>
                    <label>MEDICO</label>
                </value>
                <value>
                    <fullName>5500_MDT</fullName>
                    <label>MEDTRONIC, INC</label>
                </value>
                <value>
                    <fullName>5500_MYO</fullName>
                    <label>MYOPORE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAI</fullName>
                </value>
                <value>
                    <fullName>AAIR</fullName>
                </value>
                <value>
                    <fullName>DDD</fullName>
                </value>
                <value>
                    <fullName>DDD/CLS</fullName>
                </value>
                <value>
                    <fullName>DDDR</fullName>
                </value>
                <value>
                    <fullName>DDI</fullName>
                </value>
                <value>
                    <fullName>DDIR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VDD</fullName>
                </value>
                <value>
                    <fullName>VDI</fullName>
                </value>
                <value>
                    <fullName>VVI</fullName>
                </value>
                <value>
                    <fullName>VVI/CLS</fullName>
                </value>
                <value>
                    <fullName>VVIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mode_switch__c</fullName>
        <label>Mode Switch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>model_no__c</fullName>
        <description>Unique numeric identifier of the product</description>
        <inlineHelpText>Unique numeric identifier of the product</inlineHelpText>
        <label>Model No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oos_additional_information__c</fullName>
        <description>Reason device or lead was taken out of service (comment)</description>
        <label>OOS - Event  Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>oos_date__c</fullName>
        <description>Gives the date of the explanation. date can only be inserted if asset has the status &quot;explanted&quot;.
Date device was taken out of service (explanted, capped, or discarded)</description>
        <label>OOS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linkage to the  Order record</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>order_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>other_comments__c</fullName>
        <label>Other Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ous_asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User has an ability mark the MDRF related Asset as OUS Device in case they are not able to find the correct Asset within the system</description>
        <label>Out of Country Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>p_amp__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.00</description>
        <label>P AMP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pace_sense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pace/Sense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>part_of_donation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When MDRF is marked as donation the related Assets are flagged as a part of donation</description>
        <label>Part of Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>part_of_system_price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asset was part of an reduced system pricing.</description>
        <label>Part of System Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pid__c</fullName>
        <description>Product identifier assigned by BIOTRONIK for use with Home Monitoring Service Center registrations.</description>
        <label>PID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>polarity__c</fullName>
        <label>Polarity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_pacing_atrium__c</fullName>
        <label>Polarity Pacing Atrium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_pacing_lv__c</fullName>
        <label>Polarity Pacing LV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_pacing_rv__c</fullName>
        <label>Polarity Pacing RV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_sensing_atrium__c</fullName>
        <label>Polarity Sensing Atrium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_sensing_lv__c</fullName>
        <label>Polarity Sensing LV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>polarity_sensing_rv__c</fullName>
        <label>Polarity Sensing RV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>QUAD</fullName>
                </value>
                <value>
                    <fullName>Unipolar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>prior_calendar_year__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF(
YEAR(InstallDate) = (YEAR(TODAY())-1),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Calendar Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_type__c</fullName>
        <description>When the user adds a competitor product to a patient they must select the Product type from this picklist.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>product_type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pulse_amplitude_v_atrium__c</fullName>
        <label>Pulse Amplitude (V) Atrium</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_amplitude_v_lv__c</fullName>
        <label>Pulse Amplitude (V) LV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_amplitude_v_rv__c</fullName>
        <label>Pulse Amplitude (V) RV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_width__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.40</description>
        <label>Pulse Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_width_ms_atrium__c</fullName>
        <label>Pulse width (ms) Atrium</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pulse_width_ms_lv__c</fullName>
        <label>Pulse width (ms) LV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quantity_unit_of_measure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quantity_unit_of_measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>r_amp__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.00</description>
        <label>R AMP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>review_state__c</fullName>
        <description>Used for flagging the MDR review-ready OOS Assets.</description>
        <label>Review State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not set</fullName>
                    <default>true</default>
                    <label>Not set</label>
                </value>
                <value>
                    <fullName>Ready for review</fullName>
                </value>
                <value>
                    <fullName>In review</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>revising_facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revising Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Revising Facility)</relationshipLabel>
        <relationshipName>Asset_Revising_Facility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revising_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revising Physician</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets (Revising Physician)</relationshipLabel>
        <relationshipName>Assets_Revising_Physician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <description>All org units in SAP are uniquely identified with a company name and a company code with 4 digits, see API-Names.</description>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_stock_location__c</fullName>
        <label>SAP stock location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sensitivity_a__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.40</description>
        <label>Sensitivity - A</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_mv_atrium__c</fullName>
        <label>Sensitivity (mV) Atrium</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_mv_lv__c</fullName>
        <label>Sensitivity (mV) LV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_mv_rv__c</fullName>
        <label>Sensitivity (mV) RV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sensitivity_v__c</fullName>
        <description>Programming parameter field for Lead, example value is 2.50</description>
        <label>Sensitivity - V</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serialnumber_external_id__c</fullName>
        <description>This field is used to update CM Assets from HMSC via dataloader CLI. This field should not be on layout.</description>
        <externalId>true</externalId>
        <label>SerialNumber External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shock_impedance__c</fullName>
        <description>Programming parameter field for ICD, default value is 0</description>
        <label>Shock Impedance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slew_rate__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.00</description>
        <label>Slew Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stock_type__c</fullName>
        <description>Stock Location of the asset.</description>
        <label>Stock Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                    <label>Bulk</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Consignment Stock</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Loaned Stock</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>Trunk Stock</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>study_product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field. If checked, a check sign indicates a product as a study product in the list view</description>
        <label>Study Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>termination_date__c</fullName>
        <description>Termination date of a cardio messenger device.</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ubd_expired__c</fullName>
        <description>Shows that the asset is expired. It is not recommended to use the product if this field shows &quot;true&quot;.</description>
        <formula>expiration_date_ubd__c  &lt; TODAY ()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UBD expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>upper_rate__c</fullName>
        <description>Programming parameter field for Device, example value is 110</description>
        <label>Upper Rate</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>x181_360_days_ago__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF(
AND(
InstallDate &lt; (TODAY()-180), 
InstallDate &gt;= (TODAY()-360)),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>181 - 360 Days Ago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>x31_60_days_ago__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF(
AND(
InstallDate &lt; (TODAY()-30), 
InstallDate &gt;= (TODAY()-60)),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>31 - 60 Days Ago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>x366_730_days_ago__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF(
AND(
InstallDate &lt; (TODAY()-365), 
InstallDate &gt;= (TODAY()-730)),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>366 - 730 Days Ago</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <recordTypes>
        <fullName>System</fullName>
        <active>true</active>
        <label>System</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_BIOAsset</fullName>
        <active>true</active>
        <label>BIOTRONIK Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_CompetitorAsset</fullName>
        <active>true</active>
        <label>Competitor Asset</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>If_explanted_require_explant_date</fullName>
        <active>false</active>
        <description>If the Status is Explanted, require the Explant Date</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;US_BIOAsset&quot;,
ISPICKVAL(Status,&quot;Explanted&quot;),
ISBLANK(Explant_Date__c))</errorConditionFormula>
        <errorDisplayField>Explant_Date__c</errorDisplayField>
        <errorMessage>If the device or lead is explanted, please enter the Explant Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_not_implanted_require_Event_Reason</fullName>
        <active>false</active>
        <description>If the Status is not Implanted, then require Event Reason.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;US_BIOAsset&quot;,
!ISPICKVAL(Status,&quot;Implanted&quot;),
!ISBLANK(TEXT(Status)),
ISBLANK(TEXT(OOS_Reason__c)))</errorConditionFormula>
        <errorDisplayField>OOS_Reason__c</errorDisplayField>
        <errorMessage>If the device or lead is not implanted, please enter a reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_not_implanted_require_OOS_date</fullName>
        <active>false</active>
        <description>If the Status is not Implanted, then require OOS date.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;US_BIOAsset&quot;,
OR(
ISPICKVAL(Status,&quot;Explanted&quot;),
ISPICKVAL(Status,&quot;Discarded&quot;),
CONTAINS(TEXT(Status),&quot;Capped&quot;)),
ISBLANK(oos_date__c))</errorConditionFormula>
        <errorDisplayField>oos_date__c</errorDisplayField>
        <errorMessage>If the device or lead is not implanted, please enter the Out of Service Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Tip_Location_required_for_BIO</fullName>
        <active>true</active>
        <description>Lead Tip Location needs to be required on all implanted BIOTRONIK leads&apos; but not for Competitor Leads</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;US_BIOAsset&quot;,
Not($Permission.Validationrule_Exception),
ISPICKVAL( product_type__c , &apos;Lead&apos;) ,
OR(ISPICKVAL(Status, &apos;Implanted&apos;), ISPICKVAL(Status, &apos;Partially Capped&apos;)),
ISBLANK(TEXT( Lead_Tip_Location__c ))
)</errorConditionFormula>
        <errorMessage>Lead Tip Location is required on BIOTRONIK assets</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ONLY_ADMIN_MDR_CAN_EDIT_DT_MANUFACTURER</fullName>
        <active>true</active>
        <description>Date of manufacturer is only be available for editing for MDR users and system administrators where record type = BIOTRONIK Asset.</description>
        <errorConditionFormula>AND(
Not($Permission.Validationrule_Exception),
$RecordType.DeveloperName  = &quot;US_BIOAsset&quot;,
$UserRole.DeveloperName != &quot;BINC_Medical_Device_Reporting&quot;,
ISCHANGED(date_of_manufacture__c) 
)</errorConditionFormula>
        <errorMessage>Only system administrators and MDR Team can edit the value Date of Manufacture.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_MDR_CS_can_edit_explant_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Explant_Date__c),
!ISBLANK(PRIORVALUE(Explant_Date__c)),
Not($Permission.Validationrule_Exception),
$UserRole.DeveloperName != &quot;BINC_Medical_Device_Reporting&quot;,
$UserRole.DeveloperName != &quot;BINC_Customer_Solutions&quot;)</errorConditionFormula>
        <errorDisplayField>Explant_Date__c</errorDisplayField>
        <errorMessage>Only system administrators, Customer Solutions and the MDR Team can edit the Explant Date once it has been entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_or_MDR_Team_can_edit_OOS_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(oos_date__c),
!ISBLANK(PRIORVALUE(oos_date__c)),
Not($Permission.Validationrule_Exception),
$UserRole.DeveloperName != &quot;BINC_Medical_Device_Reporting&quot;)</errorConditionFormula>
        <errorDisplayField>oos_date__c</errorDisplayField>
        <errorMessage>Only system administrators and the MDR Team can edit the Out of Service Date once it has been entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Type_required_if_not_OUS_Asset</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;US_BIOAsset&quot;,
ous_asset__c = False,
ISBLANK(TEXT(product_type__c)))</errorConditionFormula>
        <errorDisplayField>product_type__c</errorDisplayField>
        <errorMessage>Please enter the Product Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_status_if_Product_Item_explanted</fullName>
        <active>false</active>
        <description>This validation ensures that the explant date is not set without having the record in the correct Status</description>
        <errorConditionFormula>NOT(ISBLANK(Explant_Date__c)) &amp;&amp;  NOT(ISPICKVAL(Status , &quot;Explanted&quot;) )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Please mark the Product &quot;Explanted&quot; in order to define an explant date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>asset_name_cannot_be_changed</fullName>
        <active>true</active>
        <description>Once an asset record is created, the name cannot be changed. Only Admins and the MMS_FUNC API user are able to edit the name.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()), 
ISCHANGED(Name),  
Not($Permission.Validationrule_Exception),
IF(OR($RecordType.DeveloperName = &quot;US_BIOAsset&quot;, $RecordType.DeveloperName = &quot;System&quot;), true,false) 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please contact the system administrator in order to edit the asset name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_BioAsset_implanted_or_not_Implantable</fullName>
        <active>false</active>
        <description>If Status = &apos;Implated&apos; then following fields should require a value before saving
removed Product with SAFBIO-1428</description>
        <errorConditionFormula>$RecordType.DeveloperName = &quot;US_BIOAsset&quot; 
&amp;&amp; (ISPICKVAL( Status , &quot;implanted&quot;) || ISPICKVAL( Status , &quot;Not Implantable Product&quot;))
&amp;&amp; shipped__c = false 
&amp;&amp; ous_asset__c = false &amp;&amp;
OR(
ISBLANK(Text(product_type__c)), 
ISBLANK(Text(manufacturer__c)),
ISBLANK(SerialNumber)
)</errorConditionFormula>
        <errorMessage>Product type, Manufacturer and Serial Number are required</errorMessage>
    </validationRules>
</CustomObject>